[package]
name = "emcpu"
version = "0.1.0"
license = "LGPL-3.0-only"
authors = ["Denis Drakhnia <numas13@gmail.com>"]
edition = "2021"
rust-version = "1.68"

[features]
default = ["target-riscv"]
target-riscv = ["decodetree"]

[dependencies]
log = "0.4"

[dev-dependencies]
env_logger = "0.10"

[build-dependencies]
decodetree = { optional = true, git = "https://github.com/numas13/decodetree.git" }
